# k-lagan-challenge-python

./: README.md  pyproject.toml
features/: PokeAPI.feature  Renfe.feature
features/helpers/: api_helper.py
features/model/: pokemon_model.py
features/page_objects/: pokedex_page.py  renfe_home_page.py  renfe_search_page.py  renfe_timetable_page.py
features/steps/: pokemon_steps.py  renfe_steps.py
