[tool.poetry]
name = "k-lagan-challenge-python"
version = "0.1.0"
description = ""
authors = ["German Giunta <germanfgiunta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.2"
behave = "^1.2.6"
requests = "^2.24.0"
selenium = "^3.141.0"
Appium-Python-Client = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
